<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity_background">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/setting_user_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/colorWhite"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_userAndInst"
            android:textColor="@color/normal_text_color"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_check_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_user_inst"
        android:layout_marginTop="1.1dp"
        android:background="@color/colorWhite"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_check_table"
            android:textColor="@color/normal_text_color"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_check_table"
        android:layout_marginTop="23dp"
        android:background="@color/colorWhite"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textColor="@color/normal_text_color"
            android:textSize="17sp" />

    </RelativeLayout>


</RelativeLayout>