<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/check_manage_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/colorWhite"
    android:paddingBottom="9dp"
    android:paddingEnd="45dp"
    android:paddingStart="45dp"
    android:paddingTop="9dp">

    <LinearLayout
        android:id="@+id/check_manage_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/check_manage_upload"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:src="@drawable/upload_selector" />

        <ImageView
            android:id="@+id/check_manage_all_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/all_select_selector" />

        <ImageView
            android:id="@+id/check_manage_cancel_all_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/cancel_all_select_selector" />

        <ImageView
            android:id="@+id/check_manage_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/delete_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_manage_image"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/check_manage_upload_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/upload"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/check_manage_all_select_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/all_select"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/check_manage_cancel_all_select_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/check_manage_delete_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/delete"
            android:textColor="@color/normal_text_color"
            android:textSize="13sp" />

    </LinearLayout>

</RelativeLayout>