<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_choice_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/colorWhite"
    android:padding="8dp">

    <ImageView
        android:id="@+id/bottom_choice_rectify"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@+id/bottom_choice_all_select"
        android:src="@drawable/rectify_selector" />

    <ImageView
        android:id="@+id/bottom_choice_all_select"
        android:layout_width="28.5dp"
        android:layout_height="28.5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:src="@drawable/all_select_selector" />

    <ImageView
        android:id="@+id/bottom_choice_cancel_all_select"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/bottom_choice_all_select"
        android:src="@drawable/cancel_all_select_selector" />

    <TextView
        android:id="@+id/bottom_choice_rectify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bottom_choice_rectify"
        android:layout_alignTop="@+id/bottom_choice_all_select_text"
        android:layout_below="@+id/bottom_choice_rectify"
        android:text="@string/rectify"
        android:textColor="@color/bottom_text_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/bottom_choice_all_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom_choice_all_select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/all_select"
        android:textColor="@color/bottom_text_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/bottom_choice_cancel_all_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/bottom_choice_cancel_all_select"
        android:layout_alignTop="@id/bottom_choice_all_select_text"
        android:layout_below="@+id/bottom_choice_cancel_all_select"
        android:text="@string/cancel"
        android:textColor="@color/bottom_text_color"
        android:textSize="13sp" />

</RelativeLayout>